<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_dark"
            android:layout_marginTop="76dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="190dp"
                    android:layout_height="270dp"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/iv_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/chamber" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_film_shadow"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:background="@drawable/bg_outline_detail"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="20dp"
                            android:maxHeight="20dp"
                            android:src="@drawable/ic_star" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/nunito_regular"
                            android:text="Rating"
                            android:textColor="@color/white"
                            android:textSize="10dp" />

                        <TextView
                            android:id="@+id/tv_value_star"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_regular"
                            android:includeFontPadding="false"
                            android:text="4.2"
                            android:textColor="@color/white"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:layout_marginVertical="16dp"
                        android:background="@drawable/bg_outline_detail"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="24dp"
                            android:maxHeight="24dp"
                            android:minWidth="20dp"
                            android:minHeight="20dp"
                            android:src="@drawable/ic_time_square" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:clipToOutline="true"
                            android:fontFamily="@font/nunito_regular"
                            android:text="Durations"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/tv_value_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_regular"
                            android:includeFontPadding="false"
                            android:text="4.2"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="78dp"
                        android:layout_height="78dp"
                        android:background="@drawable/bg_outline_detail"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxWidth="24dp"
                            android:maxHeight="24dp"
                            android:minWidth="20dp"
                            android:minHeight="20dp"
                            android:src="@drawable/ic_ticket_star" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:fontFamily="@font/nunito_regular"
                            android:text="Genre"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/tv_value_genre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_regular"
                            android:includeFontPadding="false"
                            android:text="romance"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_bold"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/cl_top" />

            <View
                android:id="@+id/view_guideline"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/white_25"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_header_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_regular"
                android:text="Summary"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/view_guideline" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="96dp"
                android:fontFamily="@font/nunito_regular"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_summary" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_dark"
        android:elevation="4dp"
        android:padding="32dp">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left"
            android:background="@android:color/transparent"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingTop="32dp"
        android:background="@drawable/bg_transparent_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:backgroundTint="@color/shine_red"
            app:cornerRadius="24dp"
            android:paddingVertical="16dp"
            android:text="Get Observation"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_semibold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>
