<resources>
    <string name="app_name">MyFlix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="author">~ %s</string>
</resources>